remove audit inheritance from `TipoMovimentoEntity`, add new attributes and entity relations to `DefPagamentoEntity`, refactor payment and entity handling in relevant services